pgcenter (devel) unstable; urgency=low

  * pg_stat_replication now works on standbys too.
  * pg_stat_statements: use menu and switching, remove c, v, V hotkeys.
  * show details and hint if query has failed.
  * rewrite replication context, show detailed lag info.
  * pg_stat_statements: add local IO information context (V - hotkey).
  * nicstat: return from function if sock() failed (instead of program exit).
  * print_log() refactoring, check return value for fstat.
  * reconnect_if_failed() refactoring, eliminate unwanted 'get pg version' queries.
  * print_autovac_info()/print_postgres_activity() refactoring, merge queries into one.
  * print_autovac_info() refactoring, remove unnecessary 'else' sections.
  * print_postgres_activity() refactoring, remove unnecessary 'else' sections.
  * read_uptime() refactoring, use fscanf instead of sscanf, check ret.value.
  * get_loadavg() refactoring, use float's array anf reduce number of calls.
  * use unsigned data types for always positive variables.
  * stdout sanity check in password_prompt().
  * use sizeof(...) instead of macros.
  * refresh interval is limited between 1 and 300 seconds.
  * check port number at startup.
  * replace raw numbers to 'define' macros.
  * replace strcpy/strcat with strncpy/snprintf.
  * sanitize malloc() or replace it with char.
  * print_*stat*: don't exit if stats read failed.
  * print_mem: fix free swap.
  * don't show iostat for devices without iops.
  * replace with_esc/errmsg pointers to variables.
  * fix bogus if conditions in sort_array().
  * fix program identifier violation.
  * add error handling fo get_loadavg()-fscanf(), password_prompt()-malloc().
  * rewrite query stats defines to enum.
  * rewrite Makefile, add workaround for wrong path from OpenSUSE
    ncurses-config.
  * define DUPLEX_UNKNOWN explicitly.

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sat, 19 Dec 2015 22:45:29 +0500

pgcenter (0.2.0) unstable; urgency=low
